--- a/styles/todos.css
+++ b/styles/todos.css
@@ -1,12 +1,29 @@
-#todo-list {
+main {
+    display: grid;
+    grid-template-columns: 1fr 30rem 1fr;
+    grid-template-rows: 10rem auto;
+    row-gap: 1rem;
+}
+
+#add-todo-form {
+    grid-row: 1;
+    grid-column: 2;
     background-color: var(--header-background);
-    margin: 4rem auto;
-    padding: 2rem;
-    width: 30rem;
+    padding: 1rem;
+}
+
+#add-todo-form > label {
+    display: block;
+}
+
+#todo-list {
+    grid-row: 2;
+    grid-column: 2;
 }
 
 #todo-list > li {
+    padding: 0.5rem 2rem;
+    background-color: var(--header-background);
     display: flex;
-    width: 90%;
     justify-content: space-between;
 }
